Completed the Tweets functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
   "eslint.enable": false,
   "eslint.codeAction.showDocumentation": {
     "enable": false
-  }
+  },
+  "files.associations": {
+  "*.html.erb": "erb"
+}
 }
